		last comma on the line.

	mbmsg:
		Fixed counter in log that should show the number of linked 
		messages.

	mbsebbs:
		The exec_nosuid function for doors now also has a extra small
		delay just like all other execute functions to prevent problems
		on fast machines.
		Added extra fflush in quickscan mail.
		When calling the external editor, the fromaddress if available
		is given to joe.

	mbnewusr:
		During program exit, it tried to remove the wrong socket to
		mbtask.

	mbuser:
		Fixed permissions.

	mbtask:
		Tried to call nodes during ZMH or during a Tyx window when mail
		was on hold.

	mbsetup:
		Changed nodes screens to have a separate uplink managers setup
		screen, and added switches for BBBS uplinks.
		If the convert program is found and was not found before, the
		defaults are set in menu 1.15.6.

	script:
		In the editor script (that calls joe) made a fix for screens
		wider then 80 characters. Also fixed the joe path if it should
		run in emacs mode. Added FromAddress in the header.


v0.61.3		25-Jul-2004 - 11-Aug-2004

	upgrade:
		To reinstall the corrected macro templates go into the examples
		directory and type "make macros".
		In mbsetup menu 1.7 check the new items 15, 16 and 17.
		If you want to switch running doors as user instead of via sudo
		then read doors.html and follow the instructions.
		In the english txtfiles and menus the doors menu and screens
		are updated for the newer doors setup, you might want to
		upgrade or use them as examples.

	general:
		With the newer versions of dosemu running doors as user finally
		works. To migrate you need to read doors.html.
		Changed security of most directories and files to allow only
		bbs users.

	libmbse.a:
		Removed the fdn parameter from the attach and un_attach 
		functions, not needed anymore.
		Fixed function to return full 5d address in the outbound when
		the address is in a different zone then our own zone.

	libnodelist.a: